--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage" : "http://norala.github.io",
+  "homepage": "http://norala.github.io",
   "scripts": {
     "webpack-dev-server": "webpack-dev-server",
     "webpack": "node ./node_modules/webpack/bin/webpack.js",
@@ -41,10 +41,12 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.5",
     "bootstrap": "^4.1.3",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.3.1",
     "postcss-plugins": "^1.12.1",
+    "slick-carousel": "^1.8.1",
     "webpack-php-loader": "^0.5.0",
     "webpack-server": "^0.1.2"
   }
